--- a/frontend/src/pages/pongGame.css
+++ b/frontend/src/pages/pongGame.css
@@ -33,11 +33,32 @@
 .Feature {
   position: absolute;
   top: 650px;
-  right: calc(50% - 50px);
-  background-color: black;
+  right: calc(50% - 150px);
+  background-color: rgb(180, 19, 19);
   color: white;
   padding: 5px 20px;
   border-radius: 5px;
   width: 100px;
   text-align: center; /* Centrer le texte à l'intérieur du bouton */
+}
+
+.play {
+  position: absolute;
+  top: 650px;
+  right: calc(50% + 100px);
+  background-color: rgb(0, 80, 155);
+  color: white;
+  padding: 5px 20px;
+  border-radius: 5px;
+  width: 100px;
+  text-align: center; /* Centrer le texte à l'intérieur du bouton */
+}
+
+
+.winner-message{
+  position: absolute;
+  top: 20px;
+  right: calc(50% - 50px);
+  background-color: rgb(240, 240, 240);
+  color: rgb(0, 0, 0);
 }
