--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -1,13 +1,12 @@
 .container-grid {
-  display: grid;
+  /*display: grid;*/
   grid-template-columns: 300px 300px 300px;
   gap: 50px;
   margin-top: 3%;
   justify-content: center;
   align-items: center;
-
-  
 }
+
 @font-face {
   font-family: "Dela";
   src: url("../fonts/DelaGothicOne-Regular.ttf") format("truetype");
@@ -26,13 +25,11 @@
 .container-home {
   display: grid;
   grid-template-columns: 300px 300px 300px;
-  grid-template-rows:200px 200px;
+  grid-template-rows:300px 200px;
   gap: 50px;
   margin-top: 3%;
   justify-content: center;
   /*align-items: center;*/
-
-
 }
 .container0 {
   text-align: center;
@@ -55,8 +52,43 @@
   transform: scale(1.1);
 }
 
-
 .container-1 {
+  width: 280px;
+  height: 250px;
+  background-image: url('../../public/pong.svg');
+  background-size: 50%;
+  background-repeat: no-repeat;
+  background-color: #231f20;
+  background-color: rgba(255, 255, 255, 0.4);
+  border: 3px solid #ffffff;
+  border-radius: 5px;
+  box-shadow: 0px 20px 100px rgba(0, 0, 0, 0.3);
+  background-position: center;
+  grid-row: 1;
+  justify-self: center;
+}
+.container-1:hover, .container-2:hover, .container-3:hover, .container-4:hover, .container-5:hover {
+  color: #f088a0;
+  background-color: #f9f4da;
+}
+
+.container-2 {
+  width: 280px;
+  height: 250px;
+  background-image: url('../../public/tictactoe.svg');
+  background-size: 50%;
+  background-repeat: no-repeat;
+  background-color: #231f20;
+  background-color: rgba(255, 255, 255, 0.4);
+  border: 3px solid #ffffff;
+  border-radius: 5px;
+  box-shadow: 0px 20px 100px rgba(0, 0, 0, 0.3);
+  background-position: center;
+  grid-row: 1;
+  justify-self: center;
+}
+
+.container-3 {
   width: 280px;
   height: 250px;
   background-image: url('../../public/trophy.svg');
@@ -70,12 +102,8 @@
   background-position: center;
   grid-row: 2;
 }
-.container-1:hover {
-  color: #f088a0;
-  background-color: #f9f4da;
-}
 
-.container-2 {
+.container-4 {
   width: 280px;
   height: 250px;
   background-image: url('../../public/profile.svg');
@@ -90,12 +118,8 @@
   grid-row: 2;
 }
 
-.container-2:hover {
-  color: #f088a0;
-  background-color: #f9f4da;
-}
 
-.container-3 {
+.container-5 {
   width: 280px;
   height: 250px;
   background-image: url('../../public/settings.svg');
@@ -109,10 +133,9 @@
   background-position: center;
   grid-row: 2;
 }
-.container-3:hover {
-  color: #f088a0;
-  background-color: #f9f4da;
-}
+
+
+
 
 .centered-container {
   display: flex;
