--- a/frontend/src/pages/pongGame.css
+++ b/frontend/src/pages/pongGame.css
@@ -1,4 +1,4 @@
-.canvas {
+ .canvas {
     position:relative;
     display: flex;
     justify-content: center;
@@ -30,10 +30,20 @@
   border-radius: 5px;
 }
 
+.scorej3 {
+  position: absolute;
+  top: 650px;
+  right: 900px;
+  background-color: black;
+  color: white;
+  padding: 5px 20px;
+  border-radius: 5px;
+}
+
 .Feature {
   position: absolute;
   top: 650px;
-  right: calc(50% - 150px);
+  right: calc(50% - 200px);
   background-color: rgb(180, 19, 19);
   color: white;
   padding: 5px 20px;
@@ -57,8 +67,8 @@
 
 .winner-message{
   position: absolute;
-  top: 20px;
-  right: calc(50% - 50px);
+  top: 10px;
+  right: calc(50% - 50);
   background-color: rgb(240, 240, 240);
   color: rgb(0, 0, 0);
 }
